unpackaged/main/default/objects/Centro__Grok_Feedback__c/Centro__Grok_Feedback__c.object-meta.xml
<CustomObject>
    <description>Stores feedback records from Grok user feedback.</description>
    <label>Grok Feedback</label>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grok Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>