unpackaged/main/default/objects/Centro__Grok_Feedback__c/fields/Centro__Comments__c.field-meta.xml
<CustomField>
    <fullName>Centro__Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>