unpackaged/main/default/objects/Centro__Grok_Feedback__c/fields/Centro__Question__c.field-meta.xml
<CustomField>
    <fullName>Centro__Question__c</fullName>
    <label>Question</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>