unpackaged/main/default/objects/Centro__Grok_Feedback__c/fields/Centro__SourceURL__c.field-meta.xml
<CustomField>
    <fullName>Centro__SourceURL__c</fullName>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>