unpackaged/main/default/objects/Centro__Grok_Feedback__c/fields/Centro__TopicName__c.field-meta.xml
<CustomField>
    <fullName>Centro__TopicName__c</fullName>
    <label>Topic Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>