unpackaged/main/default/objects/Centro__Grok_Feedback__c/listViews/Centro__All.listView-meta.xml
<ListView>
    <fullName>Centro__All</fullName>
    <columns>NAME</columns>
    <columns>Centro__TopicName__c</columns>
    <columns>Centro__SourceURL__c</columns>
    <columns>Centro__RelevancyEmoji__c</columns>
    <columns>Centro__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>